# release-git-tags-changelog-tests-ci-jobs

./: .gitignore  .pre-commit-config.yaml  AUTO_RELEASE_GUIDE.md  BRANCH_PROTECTION_GUIDE.md  BRANCH_PROTECTION_QUICKSTART.md  CI_CACHING_GUIDE.md  MULTI_PROJECT_RELEASE_GUIDE.md  PRE_COMMIT_GUIDE.md  README.md  pyproject.toml  versions.json
.github/: CODEOWNERS
.github/workflows/: auto-release.yml  ci.yml
scripts/: setup-branch-protection.py  setup-branch-protection.sh
src/project1/: encoder.py  test_precommit.py
src/project2/: test_release.py
tests/: __init__.py  test_example.py
